<resources>
    <string name="app_name">Route Master</string>
    <string name="dont_you_have_a_account_yet">
</string>
    <string name="signup">REGISTER</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="view_images">View Images</string>
    <string name="signup_here">Signup Here</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="communicate">Authentication</string>
    <string name="my_profile">My Profile</string>
    <string name="tickets">Tickets</string>
    <string name="bus_pass">Bus Pass</string>
    <string name="add_money">Add Money</string>
    <string name="dashboard">DashBoard</string>
    <string name="signin">Signin</string>
    <string name="todo">TODO</string>

    <string-array name="bustype">
        <item>Daewoo</item>
        <item>Hi-Ass</item>
        <item>Wagon</item>
        <item>Bandial</item>
        <item>Coaster</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_maps">Map</string>

</resources>